# sauceclient

./: .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  pyproject.toml  requirements.txt  sauceclient.py  setup.py  test_sauceclient.py  tests.py  tox.ini
doc/: README  conf.py  development.rst  getting_started.rst  index.rst  sauceclient.rst  selenium_on_sauce.rst  test_sauceclient.rst  tests.rst  unit_tests.rst
docs/: .buildinfo  .readthedocs.yaml  README  README.md  conf.py  index.html  index.rst  objects.inv  sauceclient.html  search.html  searchindex.js  selenium_on_sauce.html  selenium_on_sauce.rst  tests.html  tests.rst
docs/.doctrees/: environment.pickle  index.doctree  sauceclient.doctree  selenium_on_sauce.doctree  tests.doctree
docs/_modules/: index.html  sauceclient.html  tests.html
docs/_sources/: index.rst.txt
sauceclient/: __init__.py  sauceclient.py  test_sauceclient.py
