[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sauceclient"
version = "1.0.3dev0"
description = "Python client library for Sauce Labs API"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{name = "Corey Goldberg"}]
maintainers = [{name = "Corey Goldberg"}]
readme = "README.md"
requires-python = ">= 3.10"
keywords = ["API", "Cloud", "Testing", "Sauce Labs"]
classifiers = [
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Topic :: Software Development :: Testing',
]

[project.urls]
homepage = "https://github.com/cgoldberg/sauceclient"
source = "https://github.com/cgoldberg/sauceclient"
download = "https://pypi.org/project/sauceclient"

[dependency-groups]
dev = [
    "tox",
]
lint = [
    "black",
    "refurb",
    "ruff",
]
test = [
    "pytest",
]
validate = [
    "packaging",
    "validate-pyproject",
]

[tool.setuptools]
py-modules = ["sauceclient"]

[tool.pytest.ini_options]
addopts = "-vv" # extra verbose

[tool.black]
line-length = 88
target-version = [
    "py310", "py311", "py312", "py313", "py314"
]

[tool.ruff]
line-length = 88
respect-gitignore = true
target-version = "py310"

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "D", "E", "F", "I", "N", "FURB",
    "RUF", "TID", "UP", "W"
]
extend-ignore = [
    "D100", "D101", "D102", "D103", "D105",
    "D107", "D203", "D205", "D213", "D400",
    "D401", "D415", "N818", "RUF012"
]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 88

[tool.refurb]
python_version = "3.10"
enable_all = true
